tuana9a/vn/hanoi/121-anor-londo-cluster/18-gateway/starscream-gw.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: starscream
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: starscream
    namespace: ${namespace}
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: starscream
  namespace: ${namespace}
spec:
  gatewayClassName: starscream
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: 192.168.56.88
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values:
              - default
              - stuffs
              - coder
              - vault
              - d9stbot
              - t9stbot
              - grafana
              - dkhptd
